# hrcostreports

./: README.md  pyproject.toml
.github/workflows/: build.yml  flet_windows_build  flet_windows_build.yml  main.yml
src/: dataprocess.py  hrcostreport.py  main.py
test/: test_dataprocess.py
